--- a/index.html
+++ b/index.html
@@ -8,7 +8,9 @@
 </head>
 <body>
     
-
+    <input type="text" id="input-el">
+    <button id="input-btn" >SAVE</button>
+    <ul id="ul-el"></ul>
     <script src="index.js"></script>
 </body>
 </html>
