--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     
     <input type="text" id="input-el">
     <button id="input-btn" >SAVE</button>
+    <button id="delete-btn">DELETE ALL</button>
     <ul id="ul-el"></ul>
     <script src="index.js"></script>
 </body>
